--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,6 +1,3 @@
-# This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
-# For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
-
 name: Maven Package
 
 on:
@@ -18,19 +15,24 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-depth: 20 
+        fetch-depth: 0
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+        server-id: github
+        settings-path: ${{ github.workspace }}
+        cache: 'maven'
 
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -DskipTests -s $GITHUB_WORKSPACE/settings.xml
+    - name: Publish to GitHub Packages
+      run: |
+        mvn deploy -DskipTests \
+          -DaltDeploymentRepository=github::https://maven.pkg.github.com/${{ github.repository_owner }}/webcam-capture \
+          -s $GITHUB_WORKSPACE/settings.xml
       env:
         GITHUB_TOKEN: ${{ github.token }}
